Improve specification text referring to DOM Futures (Improves #29)
Indicate that the remaining steps should be run asynchronously when
returning a future.

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ scheduled time is in the future.
 </li>
 <li>Let <em><a href="#future">future</a></em> be a new <code><a href="#future">Future</a></code> object and <em>resolver</em> its associated resolver.
 </li>
-<li>Return <em><a href="#future">future</a></em>.
+<li>Return <em><a href="#future">future</a></em> and run the remaining steps asynchronously.
 </li>
 <li>If an error occurs, run these substeps and then terminate these steps:
 <ol>
@@ -364,7 +364,7 @@ information of that <a href="#refsECMASCRIPT">[ECMASCRIPT]</a> <code>Date</code>
 <span>Let <em><a href="#future">future</a></em> be a new <code><a href="#future">Future</a></code> object and <em>resolver</em> its associated resolver.</span>
 </li>
 <li>
-<span>Return <em><a href="#future">future</a></em>.</span>
+<span>Return <em><a href="#future">future</a></em> and run the remaining steps asynchronously.</span>
 </li>
 <li>
 <span>If an error occurs, run these substeps and then terminate these steps:</span>
@@ -419,7 +419,7 @@ argument.</span>
 <span>Let <em><a href="#future">future</a></em> be a new <code><a href="#future">Future</a></code> object and <em>resolver</em> its associated resolver.</span>
 </li>
 <li>
-<span>Return <em><a href="#future">future</a></em>.</span>
+<span>Return <em><a href="#future">future</a></em> and run the remaining steps asynchronously.</span>
 </li>
 <li>
 <span>If an error occurs, run these substeps and then terminate these steps:</span>
