--- a/index.src.html
+++ b/index.src.html
@@ -301,7 +301,7 @@ scheduled time is in the future.
 </li>
 <li>Let <em>future</em> be a new <code>Future</code> object and <em>resolver</em> its associated resolver.
 </li>
-<li>Return <em>future</em>.
+<li>Return <em>future</em> and run the remaining steps asynchronously.
 </li>
 <li>If an error occurs, run these substeps and then terminate these steps:
 <ol>
@@ -334,7 +334,7 @@ information of that <span data-anolis-ref="">ECMASCRIPT</span> <code>Date</code>
 <span>Let <em>future</em> be a new <code>Future</code> object and <em>resolver</em> its associated resolver.</span>
 </li>
 <li>
-<span>Return <em>future</em>.</span>
+<span>Return <em>future</em> and run the remaining steps asynchronously.</span>
 </li>
 <li>
 <span>If an error occurs, run these substeps and then terminate these steps:</span>
@@ -389,7 +389,7 @@ argument.</span>
 <span>Let <em>future</em> be a new <code>Future</code> object and <em>resolver</em> its associated resolver.</span>
 </li>
 <li>
-<span>Return <em>future</em>.</span>
+<span>Return <em>future</em> and run the remaining steps asynchronously.</span>
 </li>
 <li>
 <span>If an error occurs, run these substeps and then terminate these steps:</span>
