--- a/index.src.html
+++ b/index.src.html
@@ -126,7 +126,7 @@ function onError(error) {
 var date = new Date("May 15, 2012 16:20:00");
 navigator.taskScheduler.add(date, "ignoreTimezone", {
   message: "Your soup is ready!"
-}).done(onTaskAdded, onError);
+}).then(onTaskAdded, onError);
 </pre>
 <p>
 How to add an alarm that respects timezone information?
@@ -143,13 +143,13 @@ function onError(error) {
 var time = new Date(new Date(Date.now() + (3600000 * 7)));
 navigator.taskScheduler.add(time, "respectTimezone", {
   message: "Wake up!"
-}).done(onTaskAdded, onError);
+}).then(onTaskAdded, onError);
 </pre>
 <p>
 How to get all the scheduled tasks whose time is in the future?
 </p>
 <pre>
-navigator.taskScheduler.getPendingTasks().done(function(tasks) {
+navigator.taskScheduler.getPendingTasks().then(function(tasks) {
   alert("There are " + tasks.length + " tasks set."));
 }, function(error) {
     alert("An error occurred getting the scheduled tasks.");
@@ -159,7 +159,7 @@ navigator.taskScheduler.getPendingTasks().done(function(tasks) {
 How to remove a scheduled task?
 </p>
 <pre>
-var request = navigator.taskScheduler.remove(id).done(function() {
+var request = navigator.taskScheduler.remove(id).then(function() {
   alert("Task removed");
 }, function(error) {
   alert("Sorry, can't remove the task.");
@@ -211,7 +211,7 @@ The <dfn><code><a href="http://dev.w3.org/html5/spec/webappapis.html#eventhandle
 interface represents a callback used for handling events as defined in <span data-anolis-ref="">HTML5</span>.
 </p>
 <p>
-The <dfn><code><a href="http://dom.spec.whatwg.org/#future">Future</a></code></dfn> interface provides asynchronous
+The <dfn><code><a href="http://dom.spec.whatwg.org/#promise">Promise</a></code></dfn> interface provides asynchronous
 access to the result of an operation that is ongoing, has yet to start, or has completed, as defined in
 <span data-anolis-ref="">DOM</span>.
 </p>
@@ -284,11 +284,11 @@ message</code> to listen for when scheduled tasks should be executed.
 enum <dfn>TimezoneDirective</dfn> { "respectTimezone", "ignoreTimezone" };
 
 interface <dfn>TaskScheduler</dfn> {
-  <span>Future</span> <span title="TaskScheduler-getPendingTasks">getPendingTasks</span>();
-  <span>Future</span> <span title="TaskScheduler-add">add</span>(Date <var title=
+  <span>Promise</span> <span title="TaskScheduler-getPendingTasks">getPendingTasks</span>();
+  <span>Promise</span> <span title="TaskScheduler-add">add</span>(Date <var title=
 "">date</var>, <span>TimezoneDirective</span> <var title="">timezoneDirective</var>, optional any <var title=
 "">data</var>);
-  <span>Future</span> <span title="TaskScheduler-remove">remove</span>(DOMString <var title="">taskId</var>);
+  <span>Promise</span> <span title="TaskScheduler-remove">remove</span>(DOMString <var title="">taskId</var>);
 };
 </pre>
 <p>
@@ -299,15 +299,15 @@ When invoked, the <dfn title="TaskScheduler-getPendingTasks"><code>getPendingTas
 <li>Make a request to the system to retrieve the tasks that were registered by the current application and whose
 scheduled time is in the future.
 </li>
-<li>Let <em>future</em> be a new <code>Future</code> object and <em>resolver</em> its associated resolver.
+<li>Let <em>promise</em> be a new <code>Promise</code> object and <em>resolver</em> its associated resolver.
 </li>
-<li>Return <em>future</em> and run the remaining steps asynchronously.
+<li>Return <em>promise</em> and run the remaining steps asynchronously.
 </li>
 <li>If an error occurs, run these substeps and then terminate these steps:
 <ol>
 <li>Let <em>error</em> be a new <code>DOMError</code> object whose name is <code>"UnknownError"</code>.
 </li>
-<li>Call <em>resolver</em>'s <code>reject(value)</code> method with <em>error</em> as <code>value</code> argument.
+<li>Run <em>resolver</em>'s internal <em>reject</em> algorithm with <em>error</em> as <code>value</code>.
 </li>
 </ol>
 </li>
@@ -315,7 +315,7 @@ scheduled time is in the future.
 <ol>
 <li>Let <em>tasks</em> be a new array containing the <code>ScheduledTask</code> objects that were retrieved.
 </li>
-<li>Call <em>resolver</em>'s <code>accept(value)</code> method with <em>tasks</em> as <code>value</code> argument.
+<li>Run <em>resolver</em>'s intenal <code>fulfill</code> algorithm with <em>tasks</em> as <code>value</code>.
 </li>
 </ol>
 </li>
@@ -331,10 +331,10 @@ information of that <span data-anolis-ref="">ECMASCRIPT</span> <code>Date</code>
 "ct">must</em> associate the <span>JSON-serializable <code>data</code> with the task if provided.</span>
 </li>
 <li>
-<span>Let <em>future</em> be a new <code>Future</code> object and <em>resolver</em> its associated resolver.</span>
+<span>Let <em>promise</em> be a new <code>Promise</code> object and <em>resolver</em> its associated resolver.</span>
 </li>
 <li>
-<span>Return <em>future</em> and run the remaining steps asynchronously.</span>
+<span>Return <em>promise</em> and run the remaining steps asynchronously.</span>
 </li>
 <li>
 <span>If an error occurs, run these substeps and then terminate these steps:</span>
@@ -345,8 +345,7 @@ information of that <span data-anolis-ref="">ECMASCRIPT</span> <code>Date</code>
 an implementation-dependent size limit, and <code>"UnknownError"</code> otherwise.</span>
 </li>
 <li>
-<span>Call <em>resolver</em>'s <code>reject(value)</code> method with <em>error</em> as <code>value</code>
-argument.</span>
+<span>Run <em>resolver</em>'s internal <em>reject</em> algorithm with <em>error</em> as <code>value</code>.</span>
 </li>
 </ol>
 </li>
@@ -371,8 +370,7 @@ argument.</span>
 <span>Set <em>task</em>'s <code>data</code> attribute to the <code>data</code> argument, if provided.</span>
 </li>
 <li>
-<span>Call <em>resolver</em>'s <code>accept(value)</code> method with <em>task</em> as <code>value</code>
-argument.</span>
+<span>Run <em>resolver</em>'s intenal <code>fulfill</code> algorithm with <em>task</em> as <code>value</code>.</span>
 </li>
 </ol>
 </li>
@@ -386,10 +384,10 @@ argument.</span>
 <span>Make a request to the system to unregister the task with the given unique <code>taskId</code> identifier.</span>
 </li>
 <li>
-<span>Let <em>future</em> be a new <code>Future</code> object and <em>resolver</em> its associated resolver.</span>
+<span>Let <em>promise</em> be a new <code>Promise</code> object and <em>resolver</em> its associated resolver.</span>
 </li>
 <li>
-<span>Return <em>future</em> and run the remaining steps asynchronously.</span>
+<span>Return <em>promise</em> and run the remaining steps asynchronously.</span>
 </li>
 <li>
 <span>If an error occurs, run these substeps and then terminate these steps:</span>
@@ -398,8 +396,7 @@ argument.</span>
 <span>Let <em>error</em> be a new <code>DOMError</code> object whose name is <code>"UnknownError"</code>.</span>
 </li>
 <li>
-<span>Call <em>resolver</em>'s <code>reject(value)</code> method with <em>error</em> as <code>value</code>
-argument.</span>
+<span>Run <em>resolver</em>'s internal <em>reject</em> algorithm with <em>error</em> as <code>value</code>.</span>
 </li>
 </ol>
 </li>
@@ -414,8 +411,8 @@ argument.</span>
 with the given identifier.</span>
 </li>
 <li>
-<span>Call <em>resolver</em>'s <code>accept(value)</code> method with <em>removed</em> as <code>value</code>
-argument.</span>
+<span>Run <em>resolver</em>'s intenal <code>fulfill</code> algorithm with <em>removed</em> as
+<code>value</code>.</span>
 </li>
 </ol>
 </li>
