--- a/index.src.html
+++ b/index.src.html
@@ -113,7 +113,7 @@ Introduction
 Example use of the ScheduledTask API for adding, getting and removing and listening for the alarm clock use cases:
 </p>
 <p>
-How to add an alarm the ignores timezone information?
+How to add an alarm that ignores timezone information?
 </p>
 <pre>
 function onTaskAdded(task) {
