Update editor email

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Editors:
 </dt>
 <dd class="vcard">
 <span class="fn">Christophe Dumez</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
-Co., Ltd</a></span>, <span class="email"><a href="mailto:ch.dumez@sisa.samsung.com">ch.dumez@sisa.samsung.com</a></span>
+Co., Ltd</a></span>, <span class="email"><a href="mailto:ch.dumez@sta.samsung.com">ch.dumez@sta.samsung.com</a></span>
 </dd>
 </dl>
 <div class="w3conly">
