Update editor email

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ Task Scheduler API Specification
 Task Scheduler API Specification
 
 </h1>
-<h2 class="no-num no-toc" id="editor-draft-—-20-august-2013">
-Editor Draft — 20 August 2013
+<h2 class="no-num no-toc" id="editor-draft-—-10-october-2013">
+Editor Draft — 10 October 2013
 </h2>
 <dl>
 <dt>
@@ -81,7 +81,7 @@ Editors:
 </dt>
 <dd class="vcard">
 <span class="fn">Christophe Dumez</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
-Co., Ltd</a></span>, <span class="email"><a href="mailto:ch.dumez@sta.samsung.com">ch.dumez@sta.samsung.com</a></span>
+Co., Ltd</a></span>, <span class="email"><a href="mailto:ch.dumez@samsung.com">ch.dumez@samsung.com</a></span>
 </dd>
 </dl>
 <div class="w3conly">
