--- a/index.src.html
+++ b/index.src.html
@@ -83,7 +83,7 @@ Editors:
 <dd class="vcard">
 <span class="fn">Christophe Dumez</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
 Co., Ltd</a></span>, <span class="email"><a href=
-"mailto:ch.dumez@sta.samsung.com">ch.dumez@sta.samsung.com</a></span>
+"mailto:ch.dumez@samsung.com">ch.dumez@samsung.com</a></span>
 </dd>
 </dl>
 <div class="w3conly">
