Specify that tasks and their data should be removed on app uninstall (closes #7)
Specify that tasks and their data should be removed on app uninstall.

--- a/index.src.html
+++ b/index.src.html
@@ -348,6 +348,10 @@ registered task.</span>
 </li>
 </ol>
 <p>
+When an application is uninstalled, all the non-expired tasks it scheduled <em class="ct">must</em> be removed, as well
+as their associated data.
+</p>
+<p>
 <span>When invoked, the <dfn title="TaskScheduler-remove"><code>remove(<var>taskId</var>)</code></dfn> method
 <em class="ct">must</em> run the following steps:</span>
 </p>
