Promises are now in EcmaScript 6, not DOM4
Promises are now in EcmaScript 6, not DOM4. Update the specification
accordingly.

--- a/index.src.html
+++ b/index.src.html
@@ -192,9 +192,10 @@ The <dfn><code><a href="http://dev.w3.org/html5/spec/webappapis.html#eventhandle
 interface represents a callback used for handling events as defined in <span data-anolis-ref="">HTML5</span>.
 </p>
 <p>
-The <dfn><code><a href="http://dom.spec.whatwg.org/#promise">Promise</a></code></dfn> interface provides asynchronous
-access to the result of an operation that is ongoing, has yet to start, or has completed, as defined in
-<span data-anolis-ref="">DOM</span>.
+The <dfn><code><a href=
+"https://people.mozilla.org/~jorendorff/es6-draft.html#sec-promise-objects">Promise</a></code></dfn> interface provides
+asynchronous access to the result of an operation that is ongoing, has yet to start, or has completed, as defined in
+<span data-anolis-ref="">ECMASCRIPT6</span>.
 </p>
 <p>
 The concepts <dfn><a href="http://dev.w3.org/html5/spec/webappapis.html#queue-a-task">queue a task</a></dfn>,
